k8s_manifests/app1.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: app1
  labels:
    app: "1"
spec:
  selector:
    matchLabels:
       app: "1"
    replicas: 1
    template:
      metadata:
        labels:
          app: "1"
      spec:
        containers:
          - name: nginx
            image: nginx
            ports:
              - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: app1
spec:
  type: ClusterIP
  selector:
    app: "1"
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
